[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "Following along with the hypermodern python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/evancolvin/hypermodern-python-emc"
repository = "https://github.com/evancolvin/hypermodern-python-emc"
keywords = ["hypermodern"]
authors = ["evan <evancolvin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
