[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "Following along with the hypermodern python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/evancolvin/hypermodern-python-emc"
repository = "https://github.com/evancolvin/hypermodern-python-emc"
keywords = ["hypermodern"]
authors = ["evan <evancolvin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = {extras = ["toml"], version = "^5.3.1"}
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
